@@ -9,10 +9,8 @@ import com.example.foodordering.repository.FoodRepository;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.web.server.ResponseStatusException;
-
-import java.math.BigDecimal;
 import java.util.List;
-import java.util.Optional;
+import java.util.stream.Collectors;
 
 /**
  * Service to handle guest-related operations, such as retrieving available dishes,
@@ -71,13 +69,23 @@ public class GuestService {
      * @return ApiResponse containing sorted dishes.
      */
     public ApiResponse<List<FoodResponse>> getSortedDishes(SearchFoodRequest request) {
-        String order = "price_asc".equals(request.getSortBy()) ? "ASC" : "DESC";
-        List<FoodResponse> sortedDishes = foodRepository.findAvailableDishesSorted(order)
-                .stream()
+        List<Food> sortedDishes;
+        if ("price_asc".equals(request.getSortBy())) {
+            sortedDishes = foodRepository.findByIsAvailableTrueOrderByPriceAsc();
+        } else if ("price_desc".equals(request.getSortBy())) {
+            sortedDishes = foodRepository.findByIsAvailableTrueOrderByPriceDesc();
+        } else {
+            // Mặc định sắp xếp theo giá tăng nếu không có tiêu chí hoặc tiêu chí không hợp lệ
+            sortedDishes = foodRepository.findByIsAvailableTrueOrderByPriceAsc();
+        }
+
+        List<FoodResponse> foodResponses = sortedDishes.stream()
                 .map(foodResponseMapper::toFoodResponse)
-                .toList();
-        return ApiResponse.build(1000, "Success", sortedDishes);
+                .collect(Collectors.toList());
+
+        return ApiResponse.build(1000, "Success", foodResponses);
     }
+
     /**
      * Retrieves details of a specific food item.
      *
@@ -89,39 +97,6 @@ public class GuestService {
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Food not found"));
         return ApiResponse.build(1000, "Success", foodResponseMapper.toFoodResponse(food));
     }
-
-//    /**
-//     * Recommends food items similar to the search keyword.
-//     *
-//     * @param request the food item name to base recommendations on
-//     * @return ApiResponse containing recommended dishes.
-//     */
-//    public ApiResponse<List<FoodResponse>> recommendDishes(SearchFoodRequest request) {
-//        // Validate the keyword
-//        if (request.getKeyword().trim().isEmpty()) {
-//            return ApiResponse.build(1404, "Failed", null);
-//        }
-//
-//        // Find a reference food item
-//        Optional<Food> referenceFood = foodRepository.findFirstByNameContainingIgnoreCase(request.getKeyword());
-//
-//        if (referenceFood.isEmpty()) {
-//            return ApiResponse.build(1404, "Failed", null);
-//        }
-//
-//        BigDecimal minPrice = referenceFood.get().getPrice().multiply(new BigDecimal("0.8"));
-//        BigDecimal maxPrice = referenceFood.get().getPrice().multiply(new BigDecimal("1.2"));
-//
-//        List<FoodResponse> recommendations = foodRepository
-//                .findSimilarDishes(minPrice, maxPrice, referenceFood.get().getFoodId())
-//                .stream()
-//                .map(foodResponseMapper::toFoodResponse)
-//                .toList();
-//
-//        return recommendations.isEmpty()
-//                ? ApiResponse.build(1404, "Failed", null)
-//                : ApiResponse.build(1000, "Success", recommendations);
-//    }
 
 }
 
